--- a/mapping/templates/index.html
+++ b/mapping/templates/index.html
@@ -1,132 +1,110 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mapeamento</title>
-    <!-- Jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mapeamento</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="#">Features</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="#">Pricing</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link disabled">Disabled</a>#}
-{#                </li>#}
-            </ul>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">Mapeamento</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-<div class="container">
-    <!-- Modal -->
-    <div class="modal fade" id="MarcacaoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Criar Marcação</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="post-form" method="post" action="create">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label class="form-label">Nome</label>
-                            <input type="text" class="form-control" id="name">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Latitude</label>
-                            <input type="text" class="form-control" id="latitude">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Longitude</label>
-                            <input type="text" class="form-control" id="longitude">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Data de expiração</label>
-                            <input type="date" class="form-control" id="expiration_date">
-                        </div>
+    <div class="container">
+        <!-- Modal -->
+        <div class="modal fade" id="MarcacaoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Criar Marcação</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="post-form" method="post" action="create">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label class="form-label">Nome</label>
+                                <input type="text" class="form-control" id="name">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Latitude</label>
+                                <input type="text" class="form-control" id="latitude">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Longitude</label>
+                                <input type="text" class="form-control" id="longitude">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Data de expiração</label>
+                                <input type="date" class="form-control" id="expiration_date">
+                            </div>
 
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                        <button type="submit" class="btn btn-primary">Salvar</button>
+                    </div>
+                    </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                    <button type="submit" class="btn btn-primary">Salvar</button>
-                </div>
-                </form>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-12 text-center">
+                <h1 class="mt-5">Mapeamento Interativo</h1>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary mb-5 mt-3" data-bs-toggle="modal"
+                        data-bs-target="#MarcacaoModal">
+                    Criar Marcação
+                </button>
+
+
+                {{ map|safe }}
+
+                <ul class="list-unstyled">
+                    <li>Helton Teixeira</li>
+                    <li>{% now "Y" %}</li>
+                </ul>
             </div>
         </div>
     </div>
-
     <script>
-        $(document).on('submit', '#post-form', function (e){
+        $(document).on('submit', '#post-form', function (e) {
             e.preventDefault();
             $.ajax({
                 type: 'POST',
                 url: "{% url 'create' %}",
-                data:{
-                    name:$('#name').val(),
-                    latitude:$('#latitude').val(),
-                    longitude:$('#longitude').val(),
-                    expiration_date:$('#expiration_date').val(),
-                    csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
+                data: {
+                    name: $('#name').val(),
+                    latitude: $('#latitude').val(),
+                    longitude: $('#longitude').val(),
+                    expiration_date: $('#expiration_date').val(),
+                    csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
                 },
-                success: function(data){
+                success: function (data) {
                     alert(data);
                     window.location.reload();
-            }
+                }
             });
         });
 
-        function clearFields(){
+        function clearFields() {
             document.getElementById('name').value = ''
             document.getElementById('latitude').value = ''
             document.getElementById('longitude').value = ''
             document.getElementById('expiration_date').value = ''
         }
     </script>
-
-    <div class="row">
-
-        <div class="col-lg-12 text-center">
-            <h1 class="mt-5">Mapeamento Interativo</h1>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#MarcacaoModal">
-                Criar Marcação
-            </button>
-
-            {#            <p class="lead">You´ll be seeing shapefiles storaged in Database</p>#}
-
-            {{ map|safe }}
-
-            <ul class="list-unstyled">
-                <li>Helton Teixeira</li>
-                <li>{% now "Y" %}</li>
-            </ul>
-        </div>
-    </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+{% endblock content %}
